# ci-cd-template1

./: CITATION.cff  LICENSE  README.md  pixi.toml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: build-dashboard.yml  publish.yml  test.yml  train.yml  validate-data.yml
mutants/: .gitignore  pyproject.toml
mutants/src/ci_cd_template/: __init__.py  model.py  predict.py
mutants/tests/: conftest.py  test_02_model.py  test_03_e2e.py  test_04_hypothesis.py  test_05_snapshots.py
mutants/tests/__snapshots__/: test_05_snapshots.ambr
notebooks/: dashboard.py
src/ci_cd_template/: model.py
tests/: test_01_unit.py
